@startuml AbstractFactory

title Abstract Factory Pattern — Storage Provider Family

skinparam classAttributeIconSize 0
skinparam classFontStyle bold

' ── Abstract Factory ───────────────────────────────────────────
interface IStorageServiceFactory <<interface>> {
  + CreateFileUploader() : IFileUploader
  + CreateDirectoryManager() : IDirectoryManager
  + CreateDiagnostics() : IStorageDiagnostics
  + CreateStorageService() : IStorageService
}

' ── Concrete Factories ─────────────────────────────────────────
class WebDavStorageFactory {
  + CreateStorageService() : IStorageService
}

class SftpStorageFactory {
  + CreateStorageService() : IStorageService
}

class SambaStorageFactory {
  + CreateStorageService() : IStorageService
}

class CompositeStorageFactory {
  - _factories : IEnumerable<IStorageServiceFactory>
  + CreateStorageService() : IStorageService
}

' ── Relationships ──────────────────────────────────────────────
WebDavStorageFactory ..|> IStorageServiceFactory
SftpStorageFactory ..|> IStorageServiceFactory
SambaStorageFactory ..|> IStorageServiceFactory
CompositeStorageFactory ..|> IStorageServiceFactory

CompositeStorageFactory o--> "0..*" IStorageServiceFactory : "aggregates for mirroring"

note right of CompositeStorageFactory
  **Extension**
  Allows the system to produce 
  a CompositeStorageService 
  that mirrors files across 
  multiple backends.
end note

footer Abstract Factory · NurFlac
@enduml
